# resume-critic

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  agents.py  app.py  main.py  models.py  pdf_generator.py  pyproject.toml  requirements.txt  tasks.py  utils.py
data/: ats_rules.yaml  salary_reference.yaml
src/: __init__.py  main.py
src/assistants/: __init__.py  application_form.py  salary_calculator.py  star_generator.py
src/checkers/: __init__.py  ats_compatibility.py  ats_detector.py  keyword_matcher.py  quality_validator.py
src/engines/: __init__.py  cover_letter_gen.py  crewai_integration.py  cv_tailor.py  unified_cv_generator.py
src/parsers/: __init__.py  jd_parser.py  keyword_extractor.py  structure_analyzer.py
src/trackers/: __init__.py  analytics.py  application_tracker.py
src/ui/: checklists.py
src/utils/: database.py  docx_handler.py  file_converter.py  pdf_handler.py
tests/: __init__.py  test_ats_checker.py  test_integration.py  test_jd_parser.py
