[project]
name = "resume-critic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.8.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "crewai>=0.28.0",
    "fpdf2>=2.7.0",
    "pydantic>=2.0.0",
    "langchain-openai>=0.1.0",
]
